# Copyright (c) 2026 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/config/features.gni")
import("//build/test.gni")
import("../../../../../sandbox_manager.gni")

ohos_fuzztest("ClawSandboxCmdFuzzTest") {
  module_out_path = "sandbox_manager/claw_sandbox"
  fuzz_config_file = "."

  include_dirs = [
    "../../../common",
    "${sandbox_manager_path}/interfaces/inner_api/sandbox_manager/include",
    "${sandbox_manager_path}/modules/claw_sandbox/include",
  ]

  sources = [
    "../../../common/fuzz_common.cpp",
    "${sandbox_manager_path}/modules/claw_sandbox/src/sandbox_cmd_parser.cpp",
    "${sandbox_manager_path}/modules/claw_sandbox/src/sandbox_exec.cpp",
    "claw_sandbox_cmd_fuzzer.cpp",
  ]

  external_deps = [
    "access_token:libaccesstoken_sdk",
    "access_token:libtokenid_sdk",
    "bounds_checking_function:libsec_shared",
    "cJSON:cjson",
    "hilog:libhilog",
  ]

  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
  ]

  configs = [ "${sandbox_manager_path}/config:coverage_flags" ]
}
